tests/ui/consts/const-eval/format.stderr
error[E0015]: cannot call non-const formatting macro in constant functions
  --> $DIR/format.rs:2:13
   |
LL |     panic!("{:?}", 0);
   |             ^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const formatting macro in constant functions
  --> $DIR/format.rs:7:15
   |
LL |     println!("{:?}", 0);
   |               ^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const function `_print` in constant functions
  --> $DIR/format.rs:7:5
   |
LL |     println!("{:?}", 0);
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
